--- a/plugins/balafon/index.html
+++ b/plugins/balafon/index.html
@@ -44,24 +44,8 @@
       radial-gradient(ellipse at 20% 0%, rgba(160,80,20,0.12) 0%, transparent 60%),
       radial-gradient(ellipse at 80% 100%, rgba(80,40,10,0.15) 0%, transparent 60%),
       url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.012'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
- <button id="startAudio" style="
-  position: fixed; top: 14px; right: 14px; z-index: 9999;
-  padding: 8px 10px; border-radius: 10px;
-  border: 1px solid rgba(255,255,255,.15);
-  background: rgba(232,160,48,.18); color: #f0e0c0;
-  font-size: 12px; cursor:pointer;">
-  Start Audio
-</button>
   }
 
-  <a href="../../" style="
-  position: fixed; top: 14px; left: 14px; z-index: 9999;
-  padding: 8px 10px; border-radius: 10px;
-  border: 1px solid rgba(255,255,255,.15);
-  background: rgba(0,0,0,.35); color: #f0e0c0;
-  text-decoration: none; font-size: 12px;">
-  ← Retour
-</a>
   header { text-align: center; margin-bottom: 28px; }
 
   header h1 {
@@ -473,6 +457,24 @@
 </style>
 </head>
 <body>
+
+<a href="../../" style="
+  position: fixed; top: 14px; left: 14px; z-index: 9999;
+  padding: 8px 10px; border-radius: 10px;
+  border: 1px solid rgba(255,255,255,.15);
+  background: rgba(0,0,0,.35); color: #f0e0c0;
+  text-decoration: none; font-size: 12px;">
+  ← Retour
+</a>
+
+<button id="startAudio" style="
+  position: fixed; top: 14px; right: 14px; z-index: 9999;
+  padding: 8px 10px; border-radius: 10px;
+  border: 1px solid rgba(255,255,255,.15);
+  background: rgba(232,160,48,.18); color: #f0e0c0;
+  font-size: 12px; cursor:pointer;">
+  Start Audio
+</button>
 
 <header>
   <h1>BALAFON</h1>
@@ -1400,6 +1402,11 @@ function startVU() {
   }
   update();
 }
+
+document.getElementById('startAudio')?.addEventListener('click', async () => {
+  initAudio();
+  if (actx && actx.state === 'suspended') await actx.resume();
+});
 </script>
 </body>
 </html>
