--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <div class="meta">Additive · FX chain</div>
       </div>
       <div class="card">
-        <div><a href="./plugins/cs01/">CS01 (Plaits OSC)</a></div>
+        <div><a href="./plugins/cs01/">RhS01 (Macro OSC)</a></div>
         <div class="meta">Mono · AudioWorklet · WASM</div>
       </div>
     </div>
   </div>
 </body>
 </html>
+
