--- a/plugins/cs01/index.html
+++ b/plugins/cs01/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-<title>CS01 — MacroOSC (Mono)</title>
+<title>RhS01 — MacroOSC (Mono)</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&family=Share+Tech+Mono&display=swap');
@@ -371,8 +371,8 @@
       <div class="kbd">
         <div class="kbdTop">
           <div class="brand">
-            <div class="yam">YAMAHA</div>
-            <div class="cs01">CS01</div>
+            <div class="yam">BANTU Ins.</div>
+            <div class="RhS01">CS01</div>
             <div class="tag">MONO · WAVE MODES</div>
           </div>
           <div class="note" id="noteDisplay">---</div>
