Rename CS01 div class to RhS01

--- a/plugins/cs01/index.html
+++ b/plugins/cs01/index.html
@@ -372,7 +372,7 @@
         <div class="kbdTop">
           <div class="brand">
             <div class="yam">BANTU Ins.</div>
-            <div class="RhS01">CS01</div>
+            <div class="CS01">RhS01</div>
             <div class="tag">MONO · WAVE MODES</div>
           </div>
           <div class="note" id="noteDisplay">---</div>
