--- a/plugins/cs01/index.html
+++ b/plugins/cs01/index.html
@@ -296,8 +296,8 @@
 <body>
   <div class="app">
     <header>
-      <h1>CS01 · MACRO OSC</h1>
-      <div class="sub">Vintage UI · Mono · AudioWorklet (100% JS)</div>
+      <h1>RhS01 · MACRO OSC</h1>
+      <div class="sub">Vintage · Mono · AudioWorklet (100% JS)</div>
     </header>
 
     <div class="frame">
