--- a/index.html
+++ b/index.html
@@ -5,31 +5,140 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Bantu Instruments</title>
   <style>
-    body{margin:0;font-family:system-ui;background:#0e0a06;color:#f0e0c0;min-height:100vh;display:flex;align-items:center;justify-content:center;padding:28px}
-    .wrap{width:min(900px,100%);border:1px solid #3a2a15;border-radius:14px;padding:22px;background:linear-gradient(160deg,#1e1610,#120d08);box-shadow:0 30px 80px rgba(0,0,0,.7)}
-    h1{margin:0 0 10px;letter-spacing:.18em}
-    a{color:#e8a030;text-decoration:none}
+    body{
+      margin:0;
+      font-family:system-ui;
+      background:#0e0a06;
+      color:#f0e0c0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:28px;
+      background-image:
+        radial-gradient(ellipse at 20% 0%, rgba(160,80,20,0.12) 0%, transparent 60%),
+        radial-gradient(ellipse at 80% 100%, rgba(80,40,10,0.15) 0%, transparent 60%);
+    }
+
+    .wrap{
+      width:min(1000px,100%);
+      border:1px solid #3a2a15;
+      border-radius:14px;
+      padding:26px;
+      background:linear-gradient(160deg,#1e1610,#120d08);
+      box-shadow:0 30px 80px rgba(0,0,0,.7);
+    }
+
+    h1{
+      margin:0 0 10px;
+      letter-spacing:.18em;
+      font-size:22px;
+    }
+
+    a{
+      color:#e8a030;
+      text-decoration:none;
+      font-weight:600;
+    }
     a:hover{text-decoration:underline}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px;margin-top:14px}
-    .card{border:1px solid #3a2a15;border-radius:12px;padding:14px;background:rgba(0,0,0,.18)}
-    .meta{color:#886644;font-size:12px;letter-spacing:.12em;text-transform:uppercase;margin-top:6px}
+
+    .meta{
+      color:#886644;
+      font-size:12px;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      margin-top:6px;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:14px;
+      margin-top:18px;
+    }
+
+    .card{
+      border:1px solid #3a2a15;
+      border-radius:14px;
+      padding:18px;
+      background:rgba(0,0,0,.22);
+      transition:all .2s ease;
+    }
+
+    .card:hover{
+      border-color:#e8a030;
+      box-shadow:0 0 18px rgba(232,160,48,.12);
+      transform:translateY(-2px);
+    }
+
+    .card-title{
+      font-size:18px;
+      letter-spacing:.08em;
+    }
+
+    .card-desc{
+      margin-top:8px;
+      font-size:14px;
+      color:#c9b08a;
+    }
+
+    .badge{
+      display:inline-block;
+      margin-top:10px;
+      font-size:11px;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      padding:6px 10px;
+      border-radius:8px;
+      background:rgba(232,160,48,.12);
+      border:1px solid rgba(232,160,48,.35);
+      color:#e8a030;
+    }
+
+    @media (max-width:600px){
+      body{padding:18px}
+      h1{font-size:18px}
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>BANTU INSTRUMENTS</h1>
     <div class="meta">WebAudio plugins · GitHub Pages</div>
+
     <div class="grid">
+
       <div class="card">
-        <div><a href="./plugins/balafon/">Balafon</a></div>
-        <div class="meta">Additive · FX chain</div>
+        <div class="card-title">
+          <a href="./plugins/balafon/">Balafon</a>
+        </div>
+        <div class="card-desc">
+          Additive synthesis inspired by African idiophones. Pentatonic tuning · FX chain.
+        </div>
+        <div class="badge">Additive · FX</div>
       </div>
+
       <div class="card">
-        <div><a href="./plugins/cs01/">RhS01 (Macro OSC)</a></div>
-        <div class="meta">Mono · AudioWorklet · WASM</div>
+        <div class="card-title">
+          <a href="./plugins/cs01/">RhS01 (Macro OSC)</a>
+        </div>
+        <div class="card-desc">
+          Mono synthesizer with Macro Oscillator engine. Mobile-first · AudioWorklet.
+        </div>
+        <div class="badge">Mono · DSP</div>
       </div>
+
+      <div class="card">
+        <div class="card-title">
+          <a href="./plugins/samptu303/">SamPtu303 Lite</a>
+        </div>
+        <div class="card-desc">
+          8 sample pads + 4 TR-style drum synths (Kick, Snare, Hi-Hat, Cowbell). Polyphonic.
+        </div>
+        <div class="badge">Sampler · Drums · Poly</div>
+      </div>
+
     </div>
   </div>
 </body>
 </html>
-
