Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       <div class="card">
         <div class="card-title">
-          <a href="./plugins/samptu303/">SamPtu303 Lite</a>
+          <a href="./plugins/Samptu303/">SamPtu303 Lite</a>
         </div>
         <div class="card-desc">
           8 sample pads + 4 TR-style drum synths (Kick, Snare, Hi-Hat, Cowbell). Polyphonic.
@@ -142,3 +142,4 @@
   </div>
 </body>
 </html>
+
