Rename header from 'SP404 LITE' to 'SamPtu LITE'

--- a/plugins/Samptu303/index.html
+++ b/plugins/Samptu303/index.html
@@ -208,7 +208,7 @@
 <body>
 <div class="app">
   <header>
-    <h1>SP404 LITE</h1>
+    <h1>SamPtu LITE</h1>
     <div class="sub">8 SAMPLE PADS + 4 TR DRUMS · POLY · MOBILE-FIRST</div>
   </header>
 
