--- a/index.html
+++ b/index.html
@@ -138,8 +138,19 @@
         <div class="badge">Sampler · Drums · Poly</div>
       </div>
 
+      <div class="card">
+        <div class="card-title">
+          <a href="./plugins/miCS01/">miCS01 rich synth</a>
+        </div>
+        <div class="card-desc">
+          Synthesizer with Rish Oscillator engines. Polyphonic.
+        </div>
+        <div class="badge"> Synth · Poly</div>
+      </div>
+      
     </div>
   </div>
 </body>
 </html>
+
 
