--- a/plugins/miCS01/index.html
+++ b/plugins/miCS01/index.html
@@ -2,13 +2,14 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 <title>Bantu Ins. miCS01 — Plaits Engines</title>
 <style>
 /* NOTE:
    - Pas de Google Fonts (offline-friendly). Si tu veux les fonts, remets ton @import. */
 *{box-sizing:border-box;margin:0;padding:0;}
 :root{
+  --vh: 1vh; /* iOS-safe viewport unit */
   --bg:#111;
   --cyan:#5dd4e8;
   --gold:#e8c44a;
@@ -22,12 +23,15 @@ body{
   display:flex;
   justify-content:center;
   align-items:flex-start;
-  min-height:100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
+  min-height: 100dvh;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  padding:20px 14px;
+  padding: max(18px, env(safe-area-inset-top)) 14px max(18px, env(safe-area-inset-bottom));
   color:#ddd;
   -webkit-text-size-adjust:100%;
   touch-action:manipulation;
+  overflow-x:hidden;
+  overscroll-behavior-y: none;
 }
 .synth-wrapper{display:flex;flex-direction:column;gap:0;width:100%;max-width:1160px;}
 
@@ -214,7 +218,7 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
 .seq-grid-wrapper{
   flex:1;display:flex;flex-direction:column;gap:2px;
   overflow:auto;
-  max-height:clamp(180px, 35vh, 320px);
+  max-height: clamp(180px, calc(var(--vh, 1vh) * 35), 320px);
   scrollbar-width:thin;scrollbar-color:#333 #1a1a1a;
   -webkit-overflow-scrolling:touch;
 }
@@ -344,46 +348,20 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
   text-align:center;
 }
 
-/* --- RESPONSIVE FIX --- */
-@media (max-width: 600px) {
-  body { padding: 10px 5px; }
-  
-  .synth-wrapper { width: 100%; }
-
-  /* On réduit la taille des titres pour gagner de l'espace */
-  .title h1 { font-size: 14px; }
-  .title .sub { font-size: 10px; }
-
-  /* On empile les éléments de la barre du haut */
-  .top-panel { 
-    flex-direction: column; 
-    gap: 15px; 
-    align-items: stretch;
-  }
-
-  .knobs-row { 
-    justify-content: space-around; 
-    width: 100%;
-  }
-
-  /* --- GRID FIX --- */
-  /* On réduit le nombre de colonnes de pads pour qu'ils ne soient pas écrasés */
-  .grid {
-    grid-template-columns: repeat(4, 1fr) !important; 
-    gap: 6px;
-  }
-
-  /* On réduit la hauteur des pads pour qu'ils tiennent tous à l'écran */
-  .pad-btn {
-    height: 50px;
-    font-size: 10px;
-  }
-
-  /* On adapte les rubans de pitch/mod */
-  .ribbon-section {
-    height: 80px;
-    margin-top: 10px;
-  }
+/* iPhone 14 / small screens */
+@media (max-width: 430px){
+  body{padding:12px 10px;}
+  .synth-body{padding:10px 10px;}
+  .top-panel{flex-wrap:wrap;}
+  .pitch-mod-section{width:100%;}
+  .plaits-section{flex:1;min-width:0;}
+  .engine-grid{gap:4px;}
+  .brand-panel{width:132px;padding:10px 10px;}
+  .brand-cs01{font-size:24px;}
+  .sequencer{padding:8px 10px 10px;}
+  .seq-controls{gap:6px;}
+  input[type=range].slider-h{width:56px;}
+  .seq-grid-wrapper{max-height: clamp(180px, calc(var(--vh, 1vh) * 42), 380px);}
 }
 </style>
 </head>
@@ -709,6 +687,18 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
 </div>
 
 <script>
+
+// iOS viewport fix: stable vh in portrait (Safari address bar)
+(function setVh(){
+  const set = () => {
+    const vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+  };
+  set();
+  window.addEventListener('resize', set, { passive: true });
+  window.addEventListener('orientationchange', () => setTimeout(set, 120), { passive: true });
+})();
+
 // ────────────────────────────────────────────────────────
 // Utilities
 // ────────────────────────────────────────────────────────
@@ -1428,19 +1418,7 @@ function stopAllNotes(immediate = false) {
 const MAX_STEPS = 32;
 let NUM_ROWS = 25;
 const isSmall = () => window.matchMedia && window.matchMedia('(max-width: 430px)').matches;
-function setRowsForScreen() {
-  const h = window.innerHeight;
-  const w = window.innerWidth;
-  
-  // Si on est en mode Portrait (hauteur > largeur)
-  if (h > w) {
-    NUM_ROWS = 12; // On limite à 6 lignes pour éviter de scroller à l'infini
-    NUM_COLS = 4; // 4 colonnes max en portrait
-  } else {
-    NUM_ROWS = 15;
-    NUM_COLS = 8;
-  }
-}
+function setRowsForScreen(){ NUM_ROWS = isSmall() ? 15 : 25; }
 
 let viewBase = 48;
 let numSteps = 16, bpm = 120, swing = 0.5;
