--- a/plugins/miCS01/index.html
+++ b/plugins/miCS01/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
 <title>Bantu Ins. miCS01 — Plaits Engines</title>
 <style>
 /* NOTE:
@@ -362,6 +362,30 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
   .seq-controls{gap:6px;}
   input[type=range].slider-h{width:56px;}
   .seq-grid-wrapper{max-height: clamp(180px, calc(var(--vh, 1vh) * 42), 380px);}
+}
+
+/* ─────────────────────────────────────────────
+   FORCE LANDSCAPE VIEW ON MOBILE
+   ───────────────────────────────────────────── */
+
+@media screen and (orientation: portrait) and (max-width: 900px) {
+
+  body {
+    margin: 0;
+    overflow: hidden;
+  }
+
+  .synth-wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100vh;
+    height: 100vw;
+    transform: translate(-50%, -50%) rotate(90deg);
+    transform-origin: center center;
+    overflow: hidden;
+  }
+
 }
 </style>
 </head>
