Update pitch/mod section visibility and button icon

--- a/plugins/miCS01/index.html
+++ b/plugins/miCS01/index.html
@@ -411,7 +411,7 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
     <div class="top-panel">
 
       <!-- PITCH BEND / MOD -->
-      <div class="section pitch-mod-section" id="pitchModSection">
+      <div class="section pitch-mod-section hidden" id="pitchModSection">
         <div class="section-label" style="display:flex;gap:6px;justify-content:center;font-size:8px;"><span>PITCH</span><span style="color:#555">|</span><span>MOD</span></div>
         <div class="pitch-mod-inner">
           <div class="ribbon-container">
@@ -595,7 +595,7 @@ input[type=range].slider-h::-webkit-slider-thumb{-webkit-appearance:none;width:1
         <button class="seq-btn" id="btnFxPanel" onclick="toggleFxPanel()">FX ▾</button>
 
         <!-- NEW: PITCH/MOD toggle -->
-        <button class="seq-btn" id="btnPitchMod" onclick="togglePitchMod()">PITCH/MOD ▾</button>
+        <button class="seq-btn" id="btnPitchMod" onclick="togglePitchMod()">PITCH/MOD ▸</button>
 
         <div class="seq-ctrl-group">
           <span class="seq-ctrl-label">BPM</span>
