--- a/plugins/Samptu303/index.html
+++ b/plugins/Samptu303/index.html
@@ -7,18 +7,19 @@
 
 <style>
   :root{
-    --bg:#e9eaec;
-    --ink:#111;
-    --muted:#666;
-    --panel:#f3f4f6;
-    --panel2:#edf0f3;
-    --line:rgba(0,0,0,.22);
-    --line2:rgba(0,0,0,.14);
-    --shadow:rgba(0,0,0,.08);
+    /* DARK FORCÉ */
+    --bg:#0b0d12;
+    --ink:#eef1f6;
+    --muted:rgba(238,241,246,.68);
+    --panel:#121621;
+    --panel2:#0f1320;
+    --line:rgba(255,255,255,.16);
+    --line2:rgba(255,255,255,.10);
+    --shadow:rgba(0,0,0,.55);
 
-    --stepOff:rgba(0,0,0,.08);
-    --playHead:rgba(0,0,0,.14);
-    --danger:#c01818;
+    --stepOff:rgba(255,255,255,.08);
+    --playHead:rgba(255,255,255,.12);
+    --danger:#ff4b4b;
   }
 
   *{ box-sizing:border-box; }
@@ -28,6 +29,7 @@
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
     background:var(--bg);
     color:var(--ink);
+    color-scheme: dark;
   }
 
   .wrap{
@@ -41,7 +43,7 @@
     border:1px solid var(--line);
     background:linear-gradient(180deg, var(--panel), var(--panel2));
     border-radius:14px;
-    box-shadow:0 10px 26px var(--shadow);
+    box-shadow:0 14px 34px var(--shadow);
   }
 
   .topbar{
@@ -92,9 +94,22 @@
     touch-action:manipulation;
   }
   .btn:active{ transform:translateY(1px); }
-  .btn.primary{ background:rgba(0,0,0,.06); }
-  .btn.danger{ border-color:rgba(192,24,24,.35); color:var(--danger); }
-  .btn.on{ background:rgba(0,0,0,.08); }
+  .btn.primary{ background:rgba(255,255,255,.06); }
+  .btn.danger{ border-color:rgba(255,75,75,.45); color:var(--danger); }
+
+  /* état ON = “allumé” (utilisé pour FX ouvert, Play en pause, etc.) */
+  .btn.on{
+    background:rgba(255,255,255,.10);
+    border-color:rgba(255,255,255,.22);
+    box-shadow: 0 0 0 2px rgba(255,255,255,.06), 0 10px 24px rgba(0,0,0,.35);
+  }
+
+  /* Accent spécifique pour le bouton FX quand ouvert */
+  .btn.fx-on{
+    background:rgba(80,160,255,.16);
+    border-color:rgba(80,160,255,.42);
+    box-shadow: 0 0 0 2px rgba(80,160,255,.12), 0 10px 26px rgba(0,0,0,.45);
+  }
 
   .led{
     display:flex;
@@ -103,14 +118,14 @@
     padding:10px 12px;
     border-radius:12px;
     border:1px solid var(--line);
-    background:rgba(255,255,255,.35);
+    background:rgba(255,255,255,.06);
     min-height:42px;
   }
   .led .digits{
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
     font-weight:900;
     letter-spacing:.12em;
-    background:rgba(0,0,0,.06);
+    background:rgba(255,255,255,.06);
     border:1px solid var(--line2);
     padding:8px 10px;
     border-radius:10px;
@@ -138,7 +153,7 @@
     padding:8px 10px;
     border:1px solid var(--line);
     border-radius:12px;
-    background:rgba(255,255,255,.25);
+    background:rgba(255,255,255,.05);
     min-width:170px;
   }
   .knob label{
@@ -150,7 +165,7 @@
     justify-content:space-between;
     gap:10px;
   }
-  .knob input[type="range"]{ width:100%; accent-color:#111; }
+  .knob input[type="range"]{ width:100%; accent-color:#e6e9ef; }
   .knob .val{
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size:11px;
@@ -160,7 +175,6 @@
 
   .main{ padding:12px; }
 
-  /* --- TRACK ROWS (pad + steps aligned) --- */
   .tracks{
     display:flex;
     flex-direction:column;
@@ -168,10 +182,10 @@
   }
 
   .track{
-    --trk: rgba(0,0,0,.85); /* fallback */
+    --trk: rgba(255,255,255,.85);
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.18);
+    background:rgba(255,255,255,.04);
     padding:10px;
   }
 
@@ -185,7 +199,7 @@
   .padBox{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.22);
+    background:rgba(255,255,255,.04);
     padding:10px;
     display:flex;
     flex-direction:column;
@@ -199,7 +213,7 @@
     border-radius:14px;
     border:2px solid color-mix(in srgb, var(--trk) 55%, transparent);
     pointer-events:none;
-    opacity:.65;
+    opacity:.45;
   }
 
   .padTop{
@@ -229,7 +243,7 @@
     border:1px solid var(--line);
     border-radius:999px;
     padding:6px 8px;
-    background:rgba(255,255,255,.22);
+    background:rgba(255,255,255,.05);
     white-space:nowrap;
     font-size:11px;
     letter-spacing:.06em;
@@ -251,9 +265,10 @@
     user-select:none;
     touch-action:manipulation;
     position:relative;
+    color:var(--ink);
   }
   .padBtn:active{ transform:translateY(1px); }
-  .padBtn.on{ background: color-mix(in srgb, var(--trk) 12%, transparent); }
+  .padBtn.on{ background: color-mix(in srgb, var(--trk) 14%, transparent); }
 
   .padBtn .small{
     display:block;
@@ -263,6 +278,7 @@
     opacity:.75;
     margin-top:4px;
     text-transform:none;
+    color:var(--muted);
   }
 
   .miniRow{
@@ -274,6 +290,7 @@
   .tinyBtn{
     border:1px solid var(--line);
     background:transparent;
+    color:var(--ink);
     padding:8px 10px;
     border-radius:12px;
     font-size:11px;
@@ -283,7 +300,7 @@
     cursor:pointer;
     touch-action:manipulation;
   }
-  .tinyBtn.on{ background:rgba(0,0,0,.08); }
+  .tinyBtn.on{ background:rgba(255,255,255,.10); }
 
   .sctl{
     flex:1;
@@ -291,7 +308,7 @@
     border:1px solid var(--line);
     border-radius:12px;
     padding:8px 10px;
-    background:rgba(255,255,255,.20);
+    background:rgba(255,255,255,.04);
   }
   .sctl .row{
     display:flex;
@@ -314,7 +331,7 @@
   }
   .sctl input[type="range"]{
     width:100%;
-    accent-color:#111;
+    accent-color:#e6e9ef;
     touch-action: pan-y;
   }
 
@@ -323,7 +340,7 @@
     height:20px;
     border-radius:10px;
     border:1px solid var(--line2);
-    background:rgba(0,0,0,.03);
+    background:rgba(255,255,255,.03);
     overflow:hidden;
   }
   canvas.waveform-canvas{
@@ -332,11 +349,10 @@
     display:block;
   }
 
-  /* Steps */
   .stepsWrap{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.18);
+    background:rgba(255,255,255,.03);
     padding:10px;
     display:flex;
     flex-direction:column;
@@ -403,9 +419,9 @@
     transform:translateX(-50%);
     width:4px; height:4px;
     border-radius:50%;
-    background:rgba(0,0,0,.20);
+    background:rgba(255,255,255,.18);
   }
-  .step.on.beat::before{ background:rgba(255,255,255,.35); }
+  .step.on.beat::before{ background:rgba(0,0,0,.22); }
 
   /* FX panel */
   .fxPanel{ margin-top:12px; overflow:hidden; }
@@ -435,7 +451,7 @@
   .fxCard{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.20);
+    background:rgba(255,255,255,.04);
     padding:10px;
   }
   .fxCardTop{
@@ -463,7 +479,6 @@
     margin-top:8px;
   }
 
-  /* Bottom */
   .bottomBar{
     margin-top:12px;
     display:flex;
@@ -473,13 +488,14 @@
     padding:10px;
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.18);
+    background:rgba(255,255,255,.03);
   }
   .patBtns{ display:flex; gap:6px; align-items:center; flex-wrap:wrap; }
   .patLabel{ font-size:11px; color:var(--muted); letter-spacing:.08em; text-transform:uppercase; }
   .patBtn{
     border:1px solid var(--line);
     background:transparent;
+    color:var(--ink);
     padding:8px 10px;
     border-radius:12px;
     font-size:11px;
@@ -489,7 +505,7 @@
     cursor:pointer;
     touch-action:manipulation;
   }
-  .patBtn.active{ background:rgba(0,0,0,.08); }
+  .patBtn.active{ background:rgba(255,255,255,.10); }
 
   .sectionTitle{
     font-size:11px;
@@ -501,7 +517,7 @@
 
   .loading-msg{
     position: fixed; inset: 0;
-    background: rgba(0,0,0,0.55);
+    background: rgba(0,0,0,0.65);
     display:flex; align-items:center; justify-content:center;
     z-index: 9000;
     font-weight:900;
@@ -566,7 +582,7 @@
           </div>
         </div>
 
-        <button id="fxToggleBtn" class="btn">FX</button>
+        <button id="fxToggleBtn" class="btn" aria-expanded="false">FX</button>
       </div>
     </div>
 
@@ -639,7 +655,7 @@
               <div class="fxCardTop">
                 <div>
                   <div class="fxName">Vinyl</div>
-                  <div class="fxSub">Crackle + warp (wow+flutter)</div>
+                  <div class="fxSub">Crackle + warp</div>
                 </div>
                 <button id="vinyl-bypass" class="btn">Off</button>
               </div>
@@ -816,13 +832,7 @@ let masterGain, filterNode, masterOut;
 
 let lofiScriptNode, tapeWaveshaper, tapeInputGain, tapeDryGain, tapeWetGain;
 let tapeWowOsc, tapeWowGain, tapeToneFilter;
-
-// Vinyl (realistic): crackle + wow+flutter => micro-delay modulation (NOT gain)
-let vinylCrackleNode, vinylCrackleGain;
-let vinylWowOsc, vinylWowGain;
-let vinylFlutterOsc, vinylFlutterGain;
-let vinylWarpDelay;
-let vinylDryGain, vinylWetGain;
+let vinylCrackleNode, vinylWarpOsc, vinylWarpGain, vinylDryGain, vinylWetGain;
 
 const FX = {
   lofiOn: false, tapeOn: false, vinylOn: false,
@@ -860,7 +870,6 @@ function initAudio() {
   masterOut = audioCtx.createGain();
   masterOut.gain.value = 0.85;
 
-  // --- LOFI (ScriptProcessor) ---
   lofiScriptNode = audioCtx.createScriptProcessor(512, 1, 1);
   lofiScriptNode.onaudioprocess = (e) => {
     const inp = e.inputBuffer.getChannelData(0);
@@ -880,7 +889,6 @@ function initAudio() {
     }
   };
 
-  // --- TAPE ---
   tapeInputGain = audioCtx.createGain();
   tapeWaveshaper = audioCtx.createWaveShaper();
   tapeWaveshaper.oversample = '4x';
@@ -900,7 +908,6 @@ function initAudio() {
   tapeDryGain = audioCtx.createGain();
   tapeWetGain = audioCtx.createGain();
 
-  // --- VINYL: crackle source ---
   const crackleBuffer = audioCtx.createBuffer(1, sr * 2, sr);
   const cbd = crackleBuffer.getChannelData(0);
   for (let i = 0; i < cbd.length; i++) {
@@ -909,45 +916,20 @@ function initAudio() {
   vinylCrackleNode = audioCtx.createBufferSource();
   vinylCrackleNode.buffer = crackleBuffer;
   vinylCrackleNode.loop = true;
+  const crackleGain = audioCtx.createGain();
+  vinylCrackleNode.connect(crackleGain);
 
-  vinylCrackleGain = audioCtx.createGain();
-  vinylCrackleGain.gain.value = 0; // OFF by default
-  vinylCrackleNode.connect(vinylCrackleGain);
+  vinylWarpOsc = audioCtx.createOscillator();
+  vinylWarpOsc.frequency.value = 0.5;
+  vinylWarpOsc.type = 'sine';
 
-  // --- VINYL: wow + flutter -> micro delay time modulation ---
-  // Micro delay gives a pitch/time wobble WITHOUT volume pumping
-  vinylWarpDelay = audioCtx.createDelay(0.05);   // max 50ms
-  vinylWarpDelay.delayTime.value = 0.0075;       // base ~7.5ms (subtle)
-
-  // WOW (slow)
-  vinylWowOsc = audioCtx.createOscillator();
-  vinylWowOsc.type = 'sine';
-  vinylWowOsc.frequency.value = 0.35; // ~0.35Hz
-
-  vinylWowGain = audioCtx.createGain();
-  vinylWowGain.gain.value = 0; // scaled in updateFxGains
-  vinylWowOsc.connect(vinylWowGain);
-
-  // FLUTTER (fast, subtle)
-  vinylFlutterOsc = audioCtx.createOscillator();
-  vinylFlutterOsc.type = 'sine';
-  vinylFlutterOsc.frequency.value = 6.0; // ~6Hz
-
-  vinylFlutterGain = audioCtx.createGain();
-  vinylFlutterGain.gain.value = 0; // scaled in updateFxGains
-  vinylFlutterOsc.connect(vinylFlutterGain);
-
-  // Both to delayTime
-  vinylWowGain.connect(vinylWarpDelay.delayTime);
-  vinylFlutterGain.connect(vinylWarpDelay.delayTime);
-
-  vinylWowOsc.start();
-  vinylFlutterOsc.start();
+  vinylWarpGain = audioCtx.createGain();
+  vinylWarpOsc.connect(vinylWarpGain);
+  vinylWarpOsc.start();
 
   vinylDryGain = audioCtx.createGain();
   vinylWetGain = audioCtx.createGain();
 
-  // --- ROUTING ---
   const tapeOut = audioCtx.createGain();
   tapeOut.gain.value = 0.7;
 
@@ -963,17 +945,16 @@ function initAudio() {
   tapeDryGain.connect(tapeOut);
   tapeWetGain.connect(tapeOut);
 
-  // Vinyl mix stage
   const vinylOut = audioCtx.createGain();
   tapeOut.connect(vinylDryGain);
   tapeOut.connect(vinylWetGain);
-
   vinylDryGain.connect(vinylOut);
-  vinylWetGain.connect(vinylWarpDelay);
-  vinylWarpDelay.connect(vinylOut);
+  vinylWetGain.connect(vinylOut);
 
-  // Crackle injected but only audible when Vinyl ON (gain controlled)
-  vinylCrackleGain.connect(vinylOut);
+  crackleGain.gain.value = FX.vinylcrackle * 0.04;
+  crackleGain.connect(vinylOut);
+
+  vinylWarpGain.connect(vinylOut.gain);
 
   vinylOut.connect(masterOut);
   masterOut.connect(audioCtx.destination);
@@ -987,7 +968,6 @@ function initAudio() {
 function updateFxGains() {
   if (!tapeDryGain) return;
 
-  // TAPE
   if (FX.tapeOn) { tapeDryGain.gain.value = 1 - FX.tapemix; tapeWetGain.gain.value = FX.tapemix; }
   else { tapeDryGain.gain.value = 1; tapeWetGain.gain.value = 0; }
 
@@ -995,36 +975,8 @@ function updateFxGains() {
   tapeWaveshaper.curve = makeSatCurve(FX.tapedrive * 6);
   tapeWowGain.gain.value = FX.tapewow * 300;
 
-  // VINYL (realistic)
-  if (FX.vinylOn) {
-    vinylDryGain.gain.value = 1 - FX.vinylmix;
-    vinylWetGain.gain.value = FX.vinylmix;
-
-    // Depth mapping (seconds):
-    // - wow is bigger, slow
-    // - flutter is smaller, fast
-    // warp knob scales both (nonlinear for nicer response)
-    const w = Math.max(0, Math.min(1, FX.vinylwarp));
-    const warp = Math.pow(w, 1.2);
-
-    // base delay stays constant; modulation adds on top
-    // wow depth: up to ~2.2ms
-    vinylWowGain.gain.value = warp * 0.0022;
-
-    // flutter depth: up to ~0.35ms
-    vinylFlutterGain.gain.value = warp * 0.00035;
-
-    // crackle only when vinyl ON
-    if (vinylCrackleGain) vinylCrackleGain.gain.value = FX.vinylcrackle * 0.04;
-  } else {
-    vinylDryGain.gain.value = 1;
-    vinylWetGain.gain.value = 0;
-    if (vinylCrackleGain) vinylCrackleGain.gain.value = 0;
-
-    // no modulation when off
-    vinylWowGain.gain.value = 0;
-    vinylFlutterGain.gain.value = 0;
-  }
+  if (FX.vinylOn) { vinylDryGain.gain.value = 1 - FX.vinylmix; vinylWetGain.gain.value = FX.vinylmix; }
+  else { vinylDryGain.gain.value = 1; vinylWetGain.gain.value = 0; }
 }
 
 /* =========================================================================
@@ -1168,7 +1120,7 @@ function drawWaveform(padIdx, buffer) {
   const data = buffer.getChannelData(0);
   const step = Math.max(1, Math.floor(data.length / w));
 
-  ctx.strokeStyle = "rgba(0,0,0,.55)";
+  ctx.strokeStyle = "rgba(230,233,239,.65)";
   ctx.lineWidth = 1;
   ctx.beginPath();
   for (let x = 0; x < w; x++) {
@@ -1321,12 +1273,14 @@ function fillKick() {
    FX UI
    ========================================================================= */
 let fxAllBypass = false;
+
 function setFxButtonState(id, on){
   const b = document.getElementById(id);
   if (!b) return;
   b.textContent = on ? "On" : "Off";
   b.classList.toggle("on", on);
 }
+
 function applyFxFromUI(){
   FX.bits = +document.getElementById('bits').value;
   FX.srate = +document.getElementById('srate').value;
@@ -1354,6 +1308,7 @@ function applyFxFromUI(){
 
   if (audioCtx) updateFxGains();
 }
+
 function toggleFx(type){
   if (type === 'lofi') FX.lofiOn = !FX.lofiOn;
   if (type === 'tape') FX.tapeOn = !FX.tapeOn;
@@ -1373,7 +1328,7 @@ function toggleFx(type){
 }
 
 /* =========================================================================
-   BUILD TRACK UI (pad + steps aligned)
+   BUILD TRACK UI
    ========================================================================= */
 function buildTracks(){
   const root = document.getElementById('tracks');
@@ -1387,20 +1342,23 @@ function buildTracks(){
     const row = document.createElement('div');
     row.className = 'trackRow';
 
-    // LEFT: pad box
     const padBox = document.createElement('div');
     padBox.className = 'padBox';
 
     const padTop = document.createElement('div');
     padTop.className = 'padTop';
+
     const meta = document.createElement('div');
     meta.className = 'padMeta';
+
     const nm = document.createElement('div');
     nm.className = 'padName';
     nm.textContent = cfg.name;
+
     const tp = document.createElement('div');
     tp.className = 'padType';
     tp.textContent = cfg.type === 'sample' ? 'Sample' : 'Drum 808';
+
     meta.appendChild(nm);
     meta.appendChild(tp);
 
@@ -1427,11 +1385,13 @@ function buildTracks(){
     if (cfg.type === 'sample'){
       const wave = document.createElement('div');
       wave.className = 'wave';
+
       const canvas = document.createElement('canvas');
       canvas.id = `waveform-${padIdx}`;
       canvas.className = 'waveform-canvas';
       canvas.width = 260;
       canvas.height = 40;
+
       wave.appendChild(canvas);
       padBox.appendChild(wave);
 
@@ -1511,7 +1471,6 @@ function buildTracks(){
       }, { passive:false });
     }
 
-    // RIGHT: steps wrap
     const stepsWrap = document.createElement('div');
     stepsWrap.className = 'stepsWrap';
 
@@ -1592,6 +1551,19 @@ function fmtHz(v){
   return n >= 1000 ? (n/1000).toFixed(1) + "k" : String(Math.round(n));
 }
 
+function setFxUiOpen(isOpen){
+  const btn = document.getElementById('fxToggleBtn');
+  const body = document.getElementById('fxBody');
+  if (!btn || !body) return;
+  body.classList.toggle('open', isOpen);
+
+  // feedback visuel
+  btn.classList.toggle('on', isOpen);
+  btn.classList.toggle('fx-on', isOpen);
+  btn.setAttribute('aria-expanded', String(isOpen));
+  btn.textContent = isOpen ? 'FX On-Screen' : 'FX';
+}
+
 function wireUI(){
   document.getElementById('btnPlay').addEventListener('click', seqToggle);
   document.getElementById('btnStop').addEventListener('click', seqStop);
@@ -1601,9 +1573,14 @@ function wireUI(){
     seqStop();
   });
 
+  // FX TOGGLE (avec changement de couleur)
   const fxToggleBtn = document.getElementById('fxToggleBtn');
   const fxBody = document.getElementById('fxBody');
-  fxToggleBtn.addEventListener('click', () => fxBody.classList.toggle('open'));
+  fxToggleBtn.addEventListener('click', () => {
+    const open = !fxBody.classList.contains('open');
+    setFxUiOpen(open);
+  });
+  setFxUiOpen(false); // masqué par défaut (et bouton “éteint”)
 
   const tsBtn = document.getElementById('tsToggleBtn');
   const syncTsBtn = () => {
