Set initial gain value for vinylWarpGain to 0

--- a/plugins/Samptu303/index.html
+++ b/plugins/Samptu303/index.html
@@ -924,6 +924,7 @@ function initAudio() {
   vinylWarpOsc.type = 'sine';
 
   vinylWarpGain = audioCtx.createGain();
+  vinylWarpGain.gain.value = 0; 
   vinylWarpOsc.connect(vinylWarpGain);
   vinylWarpOsc.start();
 
