Update subtitle in SamPtu 303 index.html

--- a/plugins/Samptu303/index.html
+++ b/plugins/Samptu303/index.html
@@ -575,7 +575,7 @@ canvas.waveform-canvas{
       <div class="title">
         <h1>SamPtu 303 — LoFi Sampler · Drum Machine</h1>
         <div class="subRow">
-          <span class="sub">1 track = 1 row · pad + controls aligned with sequencer · color-coded</span>
+          <span class="sub"> Bitcrush Tape & Vinyl FX all the way at the bottom</span>
           <span id="fxBadge" class="badge">FX Hidden</span>
         </div>
       </div>
